When generated the password, will be sent to the password page

--- a/generator/templates/index.html
+++ b/generator/templates/index.html
@@ -1,5 +1,31 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-    <h1>Index</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam aspernatur nemo adipisci amet laudantium sequi id, perferendis aliquam dignissimos hic iure repellat magni facilis itaque similique provident doloremque laborum quos officia sunt! Ab earum voluptatem possimus, dolores fugit modi autem!</p>
+    <h1>Password Generator</h1>
+    
+    <form action="password">
+        <label for="length">Select the length of your password:</label>
+        <select name="length" id="length">
+            <option value="6">6 characters</option>
+            <option value="7">7 characters</option>
+            <option value="8">8 characters</option>
+            <option value="9">9 characters</option>
+            <option value="10">10 characters</option>
+            <option value="11">11 characters</option>
+            <option value="12">12 characters</option>
+            <option value="13">13 characters</option>
+            <option value="14">14 characters</option>
+        </select>
+
+        <label for="uppercase">Uppercase</label>
+        <input type="checkbox" name="uppercase" id="uppercase">
+        <label for="special_symbols">Special Symbols</label>
+        <input type="checkbox" name="special_symbols" id="special_symbols">
+        <label for="numbers">Numbers</label>
+        <input type="checkbox" name="numbers" id="numbers">
+
+        <button>
+            Generate
+        </button>
+
+    </form>
 {% endblock %}
