--- a/generator/templates/password.html
+++ b/generator/templates/password.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-    <h1>Password</h1>
-    <h3>{{ password }}</h3>
+    <div>
+        <h1>Password:</h1>
+        <h3>{{ password }}</h3>
+    </div>
 {% endblock %}
