--- a/generator/templates/password.html
+++ b/generator/templates/password.html
@@ -1,7 +1,13 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-    <div>
-        <h1>Password:</h1>
-        <h3>{{ password }}</h3>
+
+    <div class="d-flex justify-content-center align-items-center p-5 m-5">
+        <div class="card shadow-sm">
+            <div class="card-body bg-dark rounded p-5">
+                <h1 class="card-title text-center text-white display-4 mb-5">Generated password:</h1>
+                <h3 class="text-center text-white p-3 border rounded">{{ password }}</h3>
+            </div>
+        </div>
     </div>
+
 {% endblock %}
