--- a/generator/templates/layouts/base.html
+++ b/generator/templates/layouts/base.html
@@ -13,7 +13,7 @@
     <body class="bg-dark-subtle">
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" href="#">
+                <a class="navbar-brand text-light" href="{% url 'index' %}">
                     🔒 Password Generated
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -38,7 +38,7 @@
         </div>
         <footer class="bg-dark text-white-50 fixed-bottom">
             <div class="container text-center">
-                <small>Copyright © Your Website</small>
+                <small>Copyright 2023 © PasswordGenerator.org</small>
             </div>
         </footer>
         {# Script Js Bootstrap #}
